Implement POST & PUT HTTP Methods for RentalController